<resources>

    <string name="app_name">colorblind</string>
    <string name="app_version">1.0.0</string>
    
    <!-- Setting strings -->
    <string name="toast_notice">공지사항이 없습니다</string>
    <string name="toast_version">최신버젼입니다</string>
    <string name="toast_not_ready">준비중입니다</string>
    
    <string name="preference_category_title_1">기본정보</string>
    <string name="preference_category_title_2">색약보정 설정</string>
    
    <string name="pref_notice">공지사항</string>
    <string name="pref_version">버젼정보</string>
    <string name="pref_about">개발자 정보</string>
    <string name="pref_help">도움말</string>
    
    <string name="pref_exp_value">체험 보정 값</string>
    <string name="pref_era_value">색약 보정 값</string>
    <!-- <string name="pref_interval">보정 간격</string> -->
    <string name="pref_reset">설정 초기화</string>
    
    <!-- Setting summary strings -->
    <string name="pref_exp_summary">색약 체험값으로, 낮을수록 심한 색약</string>
    
	
    
    
    
    <!-- Camera Modes -->
    <string name="cam_mode_normal">일반 카메라</string>
    <string name="cam_mode_era">색약 보정</string>
    <string name="cam_mode_trial">색약 체험</string>
     
    <!-- Actionbar titles -->
    <string name="title_setting">환경설정</string>
    <string name="title_calibration">색약 검정</string>
    <string name="title_refine">이미지 보정</string>
    <string name="title_trial">색약 체험</string>
    <string name="title_camera">카메라 사진 보정</string>
    
    <!-- Dialogs -->
    <string name="dlg_title_calibration">검사 중단</string>
    <string name="dlg_content_calibration">검사를 중단하고 돌아가겠습니까?</string>
    <string name="dlg_yes">예</string>
    <string name="dlg_no">아니오</string>
    
    <string name="save">저장</string>
    
    <string name="dlg_title_reset">설정을 초기화</string>
    <string name="dlg_content_reset">정말 초기화 하시겠습니까?</string>
    
    <string name="dlg_title_refine">색약 보정값</string>
    
    <!-- Calibration text -->
    <string name="explanation_1">2로 보이도록 맞추세요</string>
    <string name="explanation_2">5로 보이도록 맞추세요</string>
    <string name="explanation_3">6이 보이도록 맞추세요</string>
    <string name="explanation_4">8이 보이도록 맞추세요</string>
    <string name="explanation_5">12가 보이도록 맞추세요</string>
    <string name="explanation_6">15가 보이도록 맞추세요</string>
    <string name="explanation_7">74가 보이도록 맞추세요</string>
    <string name="explanation_8">97이 보이도록 맞추세요</string>
    
    <string name="btn_next">다음</string>
    
    
    <!-- Actionbar -->
    <string name="action_save">저장</string>
    
</resources>
