<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <customui.PreferenceTitle
        android:title="@string/preference_category_title_1">
        
       <!-- Basic info -->
        <Preference 
            android:key="key_notice" 
            android:title="@string/pref_notice" />
        
        <Preference android:key="key_version" 
            android:title="@string/pref_version" 
            android:layout="@layout/pref_item_version" />
        
        <Preference 
            android:key="key_about"
            android:title="@string/pref_about" />
        
        <Preference 
            android:key="key_help"
            android:title="@string/pref_help"/>

    </customui.PreferenceTitle>
    
    <customui.PreferenceTitle 
        android:title="@string/preference_category_title_2">
        
        <!--  Refine values -->
        <Preference 
            android:key="key_exp_value"
            android:title="@string/pref_exp_value" />
        
        <Preference
            android:key="key_era_value"
            android:title="@string/pref_era_value"/>
        
        <Preference
            android:key="key_interval"
            android:title="@string/pref_interval" />
        
        <Preference
            android:key="key_reset"
            android:title="@string/pref_reset" />
        
        
    </customui.PreferenceTitle>

</PreferenceScreen>
